--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,21 @@
 [versions]
-agp = "8.5.1"
-kotlin = "2.0.0"
+agp = "8.5.2"
+kotlin = "2.0.20"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.3"
-activityCompose = "1.9.0"
-composeBom = "2024.06.00"
+lifecycleRuntimeKtx = "2.8.4"
+activityCompose = "1.9.1"
+composeBom = "2024.08.00"
 retrofit = "2.9.0"
 gson = "2.9.0"
 room = "2.6.1"
 hilt = "2.51.1"
-kspVersion = "2.0.0-1.0.21"
+kspVersion = "2.0.20-1.0.24"
 navigation-ktx = "2.7.7"
 coroutines = "1.7.3"
-composeNavigation = "2.8.0-beta05"
+composeNavigation = "2.8.0-rc01"
 serialization = "1.6.3"
 hiltNavigation = "1.2.0"
 glide = "1.0.0-beta01"
