update dependencies and fix issue with back press navigation

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,17 +5,17 @@ coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
-lifecycleRuntimeKtx = "2.8.4"
-activityCompose = "1.9.1"
-composeBom = "2024.08.00"
+lifecycleRuntimeKtx = "2.8.5"
+activityCompose = "1.9.2"
+composeBom = "2024.09.01"
 retrofit = "2.9.0"
 gson = "2.9.0"
 room = "2.6.1"
 hilt = "2.51.1"
 kspVersion = "2.0.20-1.0.24"
-navigation-ktx = "2.7.7"
+navigation-ktx = "2.8.0"
 coroutines = "1.7.3"
-composeNavigation = "2.8.0-rc01"
+composeNavigation = "2.8.0"
 serialization = "1.6.3"
 hiltNavigation = "1.2.0"
 glide = "1.0.0-beta01"
