--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
-agp = "8.13.0"
-kotlin = "2.2.10"
+agp = "9.0.0"
+kotlin = "2.3.0"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
@@ -11,8 +11,8 @@ composeBom = "2025.08.01"
 retrofit = "3.0.0"
 gson = "2.9.0"
 room = "2.7.2"
-hilt = "2.57.1"
-kspVersion = "2.2.10-2.0.2"
+hilt = "2.58"
+kspVersion = "2.3.2"
 navigation-ktx = "2.9.3"
 coroutines = "1.10.2"
 composeNavigation = "2.9.3"
