--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -5,12 +5,12 @@ coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
 espressoCore = "3.7.0"
-lifecycleRuntimeKtx = "2.9.3"
-activityCompose = "1.10.1"
-composeBom = "2025.08.01"
+lifecycleRuntimeKtx = "2.10.0"
+activityCompose = "1.12.2"
+composeBom = "2026.01.00"
 retrofit = "3.0.0"
 gson = "2.9.0"
-room = "2.7.2"
+room = "2.8.4"
 hilt = "2.58"
 kspVersion = "2.3.2"
 navigation-ktx = "2.9.3"
@@ -35,6 +35,7 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+androidx-materialIconsExtended = { group = "androidx.compose.material", name = "material-icons-extended" }
 retrofit = {group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit"}
 gson = {group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit"}
 room-runtime = {group = "androidx.room", name = "room-runtime", version.ref = "room"}
