--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,10 @@ composeNavigation = "2.9.6"
 serialization = "1.9.0"
 hiltNavigation = "1.3.0"
 coil = "3.3.0"
+adaptiveNavigation3 = "1.3.0-alpha05"
+nav3Core = "1.0.0"
+material3AdaptiveNav3 = "1.3.0-alpha05"
+adaptiveNavigation3Version = "1.3.0-alpha06"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -52,6 +56,12 @@ kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serializa
 hilt-navigation-compose = {module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigation"}
 coil = {module = "io.coil-kt.coil3:coil-compose", version.ref = "coil"}
 coil-network-okhttp = {module = "io.coil-kt.coil3:coil-network-okhttp", version.ref = "coil"}
+#Core Navigation 3
+nav3-runtime = {group = "androidx.navigation3", name = "navigation3-runtime", version.ref = "nav3Core"}
+nav3-ui = {group = "androidx.navigation3", name = "navigation3-ui", version.ref = "nav3Core"}
+androidx-compose-material3-adaptive = { group = "androidx.compose.material3.adaptive", name = "adaptive-layout", version.ref = "material3AdaptiveNav3" }
+kotlinx-serialization-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-core", version.ref = "serialization" }
+androidx-adaptive-navigation3 = { group = "androidx.compose.material3.adaptive", name = "adaptive-navigation3", version.ref = "adaptiveNavigation3Version" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
