--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,6 @@ android.dependency.useConstraints=true
 android.r8.strictFullModeForKeepRules=false
 #This can be also excluded
 android.builtInKotlin=true
-android.newDsl=false
+android.newDsl=true
 android.disallowKotlinSourceSets=false
 android.generateSyncIssueWhenLibraryConstraintsAreEnabled=false
