--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,11 +2,11 @@
 agp = "9.0.0"
 kotlin = "2.3.10"
 coreKtx = "1.17.0"
-junit = "5.21.0"
+junit = "4.13.2"
 junitVersion = "1.3.0"
-mockito = "5.21.0"
+mockito = "5.3.1"
 mockitoKotlin = "5.0.0"
-coroutinesTest = "1.10.2"
+coroutinesTest = "1.9.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.10.0"
 activityCompose = "1.12.3"
@@ -69,7 +69,7 @@ androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "j
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 #Mockito
 mockito = { group = "org.mockito", name = "mockito-core", version.ref = "mockito" }
-mockito-kotlin = { group = "org.mockito", name = "kotlin:mockito-kotlin", version.ref = "mockitoKotlin" }
+mockito-kotlin = { group = "org.mockito.kotlin", name = "mockito-kotlin", version.ref = "mockitoKotlin" }
 #Coroutines Test
 coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "coroutinesTest" }
 
